--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header></header>
 
     <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+        <h1>Eleve seu negócio digital a outro nível <strong id="1p">com um Front-end de qualidade!</strong></h1>
+
+        <p>Olá! Sou Lucas Nogueira, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+
+        <a href="https://www.linkedin.com">linkedin</a>
+        <a href=https://github.com/lucsnogueira">Github</a>
+
+        <img src="imagem.jpg" alt="Foto de perfil de Lucas Nogueira">
     </main>
 
     <footer></footer>
