--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -12,12 +12,14 @@
     <header></header>
 
     <main class="apresentacao">
-        <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-
-        <p>Olá! Sou Lucas Nogueira, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-
-        <a href="https://www.linkedin.com">linkedin</a>
-        <a href=https://github.com/lucsnogueira">Github</a>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Lucas Nogueira, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://www.linkedin.com">linkedin</a>
+                <a class="apresentacao__links__link" href=https://github.com/lucsnogueira">Github</a>
+            </div>
+        </section>
 
         <img src="imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
     </main>
