--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -16,12 +16,23 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Lucas Nogueira, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://www.linkedin.com">linkedin</a>
-                <a class="apresentacao__links__link" href=https://github.com/lucsnogueira">Github</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href=https://github.com/lucsnogueira>
+                    <img src="assets/github.png" alt="github icon">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://www.linkedin.com">
+                    <img src="assets/linkedin.png" alt="linkedin icon">
+                    linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://www.twitch.tv/folkzzzzzzz">
+                    <img src="assets/twitch.png" alt="twitch icon">
+                    Twitch
+                </a>
             </div>
         </section>
 
-        <img src="imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
+        <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
     </main>
 
     <footer></footer>
