--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -35,6 +35,8 @@
         <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Lucas Nogueira</p>
+    </footer>
 </body>
 </html>
