--- a/projeto-portfolio/about.html
+++ b/projeto-portfolio/about.html
@@ -20,7 +20,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iure id molestiae vitae aperiam vero, culpa aliquam nam quam ipsam. Dolores, nihil hic et eveniet nisi quo neque accusamus minima! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem error neque tempore ullam ex dicta animi, quaerat magni quasi hic libero sunt excepturi cupiditate praesentium culpa ad eos corrupti. Explicabo!</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet voluptas non culpa fuga assumenda enim optio architecto adipisci fugiat, distinctio cupiditate mollitia animi pariatur. Odio repellendus magni amet quis numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatum repellendus, voluptate, nesciunt nihil nisi quos voluptates distinctio in ullam inventore voluptas similique maxime repudiandae saepe molestias quas ut provident! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique corrupti numquam aspernatur veniam facilis, alias iste quibusdam sit, molestias reprehenderit nostrum quod suscipit vel repudiandae. Nulla perferendis laborum facere!</p>
         </section>
-        <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
+        <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" class="apresentacao__imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lucas Nogueira</p>
