--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
         </section>
-        <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" id="perfil">
+        <img src="./assets/imagem.jpg" alt="Foto de perfil de Lucas Nogueira" class="apresentacao__imagem">
     </main>
 
     <footer class="rodape">
